# setuptools-git-details

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  hello.py  justfile  pyproject.toml
.github/workflows/: ci.yaml
setuptools_git_details/: __init__.py  git.py  main.py
tests/: invalid_pyproject_no_file_field.toml  invalid_pyproject_no_tool_sgd_section.toml  invalid_pyproject_no_write_to_field.toml  sample_pyproject.toml  sample_pyproject_disabled.toml  test_git.py  test_main.py
