[build-system]
requires = [
    "setuptools>=75",
    "setuptools_scm>=8.1.0",
    'tomli; python_version < "3.11"',
]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools-git-details"
dynamic = ["version"]
description = "A setuptools package to add details from git to your project."
readme = "README.md"
authors = [
    {name = "Marc Carré", email = "carre.marc@gmail.com"}
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/marccarre/setuptools-git-details"
Documentation = "https://github.com/marccarre/setuptools-git-details"
Repository = "https://github.com/marccarre/setuptools-git-details.git"
Issues = "https://github.com/marccarre/setuptools-git-details/issues"
Changelog = "https://github.com/marccarre/setuptools-git-details/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
version_file = "setuptools_git_details/_version.py"
